--- a/Requirement_Task_Web/Views/Update/Change.cshtml
+++ b/Requirement_Task_Web/Views/Update/Change.cshtml
@@ -11,7 +11,7 @@
     <title>Change</title>
 </head>
 <body>
-    <script>alert("Status Changes Successfully"); location.href = "index";</script>
+    <script>alert("Status Changes Successfully"); location.href = "../Dashboard/ViewReq";</script>
 
 </body>
 </html>
